Simplified lambda function, now uses 'toList()'